# boxes

./: CMakeLists.txt  README.md  inverse.cpp  inverse.h  main.cpp  p-box.cpp  p-box.h  s-box.cpp  s-box.h  tests.cpp  tests.h
